Fix clipping of overly-wide SVGs

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -43,7 +43,7 @@ pre a:hover, pre a:link:hover {
     color: inherit;
 }
 
-img {
+img, svg {
     max-width: 100%;
 }
 
